iter_language/tests/corpus/valid/runner-implicit-single.iter
workspace local {
  base = "."
}

agent noop {}

runner {
  continue_on_error = false
  behavior = loop
  prompt = "Implicit single binding."
}
