iter_language/tests/corpus/invalid/clone-without-excludes.iter
workspace clone {
  base = "."
  preserve_mtime = true
  apply_back { mode = sync }}
runner { continue_on_error = false  behavior = wait }
